samples/_failures_safe/1761539639_618b7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_619fba3a.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_619fba3a.c:159:17: error: expected declaration or statement at end of input
  159 |                 return 0;
      |                 ^~~~~~
./samples/SAFE/__tmp_619fba3a.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_619fba3a.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_619fba3a.c:159:17: error: expected declaration or statement at end of input
